<resources>
    <string name="app_name">NowOrNever</string>
    <string name="home">Accueil</string>
    <string name="profile">Profil</string>

    <string name="love">Amour</string>
    <string name="hot">Caliente</string>
    <string name="funny">Rigolo</string>
    <string name="random">Divers</string>

    <string name="canari">CANARI</string>
    <string name="pivert">PIVERT</string>
    <string name="canard">CANARD</string>
    <string name="pelican">PELICAN</string>
    <string name="goeland">GOELAND</string>
    <string name="paon">PAON</string>
    <string name="faucon">FAUCON</string>
    <string name="aigle">AIGLE</string>
    <string name="condor">CONDOR</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Catégorie</string>
    <string name="add_challenge_title">Envoyer/Ajouter un challenge</string>
    <string name="receiver_name_hint">Prénom Nom du receveur</string>
    <string name="points_number_hint">Nombre de points</string>
    <string name="description_hint">Description</string>
    <string name="cancel">Annuler</string>
    <string name="send">Envoyer</string>
    <string name="confirm_choice">Voulez-vous confirmer ce choix?</string>
    <string name="no">NON</string>
    <string name="yes">OUI</string>
    <string name="email_address">Adresse e-mail</string>
    <string name="password">Mot de passe</string>
    <string name="welcome_title">Bienvenue dans l\'application NowOrNever !   Connecte toi pour commencer à l\'utiliser</string>
    <string name="connect_google">Se connecter avec Google</string>
    <string name="hello_user_text">Salut à toi %1$s !!</string>
    <string name="user_level_text">Tu as le niveau %1$s</string>
</resources>
