<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_brown"
    tools:context=".ui.homechallenges.current.send.SendChallengeDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/rounded_white_background">

        <TextView
            android:id="@+id/confirmationTv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_choice"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            style="@style/SecondaryButtonStyle"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmationTv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendBtn"
            style="@style/PrimaryButtonStyle"
            android:text="@string/yes"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cancelBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>